# fucking-fast-mandelbrot

./: meson.build
src/: main.cpp
